--- a/window/ui/MainWindow.ui
+++ b/window/ui/MainWindow.ui
@@ -249,13 +249,13 @@
          <item>
           <widget class="QLineEdit" name="number_propusk">
            <property name="inputMask">
-            <string>##########</string>
+            <string/>
            </property>
            <property name="text">
             <string/>
            </property>
            <property name="maxLength">
-            <number>10</number>
+            <number>32767</number>
            </property>
           </widget>
          </item>
